# MedGemma-Impact

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_controller_minimal.py
config/: sentinel.yaml
core/: __init__.py  constants.py  fsm.py  logger.py
encoder/: __init__.py  intent_encoder.py  token_vocab.py
input/: __init__.py  gaze_sim.py  gaze_webcam.py  signal_fuser.py
llm/: __init__.py  model_loader.py  reconstructor.py
output/: __init__.py  emergency.py  tts_engine.py
pipeline/: __init__.py  controller.py
safety/: __init__.py  confidence.py  entropy_guard.py  grammar_check.py
scripts/: benchmark.py  setup_model.py  verify_emergency_latency.py
sentinel/: __init__.py
sentinel/core/: __init__.py  config.py  pipeline.py
sentinel/gaze/: __init__.py  blink_detector.py  simulator.py  tracker.py
sentinel/intent/: __init__.py  classifier.py  symbol_board.py
sentinel/llm/: __init__.py  engine.py  prompt_builder.py
sentinel/output/: __init__.py  display.py  tts.py
sentinel/safety/: __init__.py  emergency.py
tests/: __init__.py  test_e2e_smoke.py  test_fsm.py  test_gaze.py  test_intent.py  test_llm.py  test_pipeline.py  test_safety.py
ui/: __init__.py  app.py  main_window.py  web_app.py  widgets.py
ui/static/: index.html
